Update 'pxyz4tru1-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:9afdbd21cfccfb96d883ca93567a7d5acceaea2b@sha256:6d7de767fc92102f808d2436511637778be47977042dd273bf3fbd5064ddc190

--- a/components/pxyz4tru1-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/pxyz4tru1-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pxyz4tru1-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:9afdbd21cfccfb96d883ca93567a7d5acceaea2b@sha256:6d7de767fc92102f808d2436511637778be47977042dd273bf3fbd5064ddc190
+          name: container-image
